# re2-mojo

./: .gitignore  LICENSE  README.md  pyproject.toml
cpp/libre2-mojo/: CMakeLists.txt
cpp/libre2-mojo/include/: libre2_mojo.h
cpp/libre2-mojo/src/: libre2_mojo.cc
examples/: lexer_table_demo.mojo  url_split_demo.mojo
re2_mojo/: __init__.mojo  _ffi.mojo  compile.mojo  errors.mojo  flags.mojo  pattern.mojo  shared_pattern.mojo
scripts/: build.sh  install.sh
src/re2_mojo/: __init__.mojo  _ffi.mojo  compile.mojo  match.mojo  pattern.mojo  shared_pattern.mojo
tests/: test_compile.mojo  test_compile_errors.mojo  test_ffi_smoke.mojo  test_flags.mojo  test_match_groups.mojo  test_pattern_captures_count.mojo  test_pattern_lifecycle.mojo  test_pattern_match.mojo  test_pattern_matches_all.mojo  test_pattern_search.mojo  test_pattern_sub.mojo  test_shared_pattern.mojo
